feat: update version numbers for testing

--- a/{% if git_provider == 'github' %}.github{% endif %}/.devcontainer/devcontainer.json.jinja
+++ b/{% if git_provider == 'github' %}.github{% endif %}/.devcontainer/devcontainer.json.jinja
@@ -2,31 +2,31 @@
 {
   "name": "{{project_name}}",
   {%- if custom_devcontainer_features %}
-  "image": "mcr.microsoft.com/devcontainers/base:22.04",
+  "image": "mcr.microsoft.com/devcontainers/base:ubuntu-22.04",
   "features": {
-    "ghcr.io/devcontainers-contrib/features/copier": {
+    "ghcr.io/devcontainers-contrib/features/copier:7.0.12": {
       // renovate: datasource=github-tags depName=copier-org/copier
-      "version": "9.1.1"
+      "version": "9.1.0"
     },
-    "ghcr.io/devcontainers-contrib/features/go-task": {
+    "ghcr.io/devcontainers-contrib/features/go-task:1.0.4": {
       // renovate: datasource=github-tags depName=go-task/task
-      "version": "3.33.1"
+      "version": "3.33.0"
     },
-    "ghcr.io/devcontainers-contrib/features/mkdocs": {
+    "ghcr.io/devcontainers-contrib/features/mkdocs:2.0.17": {
       // renovate: datasource=github-tags depName=mkdocs/mkdocs
-      "version": "1.5.3"
+      "version": "1.5.2"
     },
-    "ghcr.io/devcontainers/features/node": {
+    "ghcr.io/devcontainers/features/node:1.3.1": {
       // renovate: datasource=github-tags depName=nodejs/node versioning=node
-      "version": "20.11.0"
+      "version": "20.10.0"
     },
-    "ghcr.io/devcontainers-contrib/features/pre-commit": {
+    "ghcr.io/devcontainers-contrib/features/pre-commit:2.0.16": {
       // renovate: datasource=github-tags depName=pre-commit/pre-commit
-      "version": "3.6.0"
+      "version": "3.5.0"
     },
-    "ghcr.io/devcontainers/features/python": {
+    "ghcr.io/devcontainers/features/python:1.3.1": {
       // renovate: datasource=github-tags depName=python/cpython
-      "version": "3.12.1"
+      "version": "3.12.0"
     }
   },
   "customizations": {
