--- a/{% if git_provider == 'github' %}.github{% endif %}/.devcontainer/devcontainer.json.jinja
+++ b/{% if git_provider == 'github' %}.github{% endif %}/.devcontainer/devcontainer.json.jinja
@@ -2,7 +2,7 @@
 {
   "name": "{{project_name}}",
   {%- if custom_devcontainer_features %}
-  "image": "mcr.microsoft.com/devcontainers/base:ubuntu-22.04",
+  "image": "mcr.microsoft.com/devcontainers/base:focal",
   "features": {
     // renovate: depType=devcontainerFeature datasource=docker
     "ghcr.io/devcontainers-contrib/features/copier:7.0.12": {
